@@ -1,7 +1,22 @@
-// Java 8: String formatting
+// Java 20: String formatting using String::formatted
 public class StringFormatExample {
     public static void main(String[] args) {
-        String result = String.format("Hello, %s!", "World");
+        String result = "Hello, %s!".formatted("World");
         System.out.println(result);
     }
 }
+/*
+
+Converting the given Java 8 code to Java 20 doesn't require significant changes because the `String.format` method has been part of Java since Java 1.5. However, to adhere to best practices and leverage modern Java features, we can consider using `String::formatted` which was introduced in Java 15 and further improved in Java 20. This method provides a more fluent and object-oriented approach to string formatting. Here's how you can rewrite the code:
+
+
+
+### Explanation:
+1. **Use of `String::formatted`:** This method is a more modern approach to string formatting introduced in Java 15. It provides a cleaner and more fluent syntax, avoiding the need to call `String.format` as a static method.
+
+2. **Performance and Readability:** The `formatted` method is often more readable and can be more performant in certain scenarios, especially when dealing with more complex string manipulations.
+
+3. **Compliance and Security:** There are no specific compliance or security issues related to string formatting in this context. However, always ensure that any string formatting does not inadvertently expose sensitive information.
+
+By using `String::formatted`, the code is not only compliant with modern Java standards but also adheres to best practices in terms of readability and maintainability.
+*/
